Changed hit circle style Fixed hitting behind enemy piece

--- a/Play/styles/style.css
+++ b/Play/styles/style.css
@@ -140,8 +140,7 @@ body {
 .circle{
   border:2px;
   border-radius:50%;
-  background:rgba(105, 105, 105, 0.801);
-  opacity: 50%;
+  background:rgba(0, 0, 0, 0.3);
   color:white;
   width:40px;
   height:40px;
